fixing minor overlap of nav by button due to z-index... I think I'm done!! (for now) :tada:

--- a/src/App.css
+++ b/src/App.css
@@ -172,7 +172,7 @@ img {
 	bottom: 0;
 	right: 0;
 	width: 100%;
-	z-index: 10;
+	z-index: 9;
 	opacity: 0.85;
 	display: none;
 }
